@@ -6,7 +6,7 @@
     <parent>
         <artifactId>hpoworkbench</artifactId>
         <groupId>org.monarchinitiative.hpoworkbench</groupId>
-        <version>2.1.1</version>
+        <version>2.1.4</version>
     </parent>
 
     <artifactId>hpoworkbench-gui</artifactId>
@@ -83,6 +83,15 @@
                 <version>0.0.5</version>
                 <configuration>
                     <mainClass>org.monarchinitiative.hpoworkbench.StockUiApplication</mainClass>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
 
